fix: overflow

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -20,7 +20,7 @@ body {
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
-	overflow-y: hidden;
+	overflow-y: auto;
 	overflow-x: hidden;
 	scroll-snap-type: y mandatory;
 	min-width: 0;
